service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    deploy: app1-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    deploy: app2-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
