ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: app1.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app1-service
                port:
                  number: 80
    - host: app2.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app2-service
                port:
                  number: 80
